public/styles/tweet-layout.css
article {
  margin-top: 2em;
  padding: 1em 0 0.5em 0;
  display: flex;
  flex-direction: column;
  border: 4px solid rgb(73, 73, 73);
}

.article-content {
  font-size: 22px;
  padding: 0 0.5em 0 0.5em;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 98%;
  margin-left: auto;
  margin-right: auto;
}

#icon{
  padding-right: 0.5em;
}

#username{
  color: rgb(184, 187, 236);
  padding-bottom: 1em;
}

p {
  margin: 2em 0 1.5em 0;
  padding: 0 1.5em 0 1.5em;
  font-size: 20px;
  font-weight: 700;
}

#name {
  display: flex;
  align-items: center;
}

#name span{
  padding-left: 0.5em;
}

footer{
  border-top: 4px solid rgb(73, 73, 73);
  border-width: 100%;
}

footer span {
  font-size: 12px;
  font-weight: lighter;
  padding: 1em 1em 0 1em;
}

.icons i{
  color: rgb(41, 49, 161);
  padding: 0 4px 0 4px;
  font-size: 16px;
}

footer span i:hover{
  color:rgb(255, 175, 71);
  cursor: pointer;
  
}

article:hover{
  box-shadow: 5px 5px rgb(184, 187, 236);
}

